# TensorRT-CPP

./: README.md
Arcface/: CMakeLists.txt  face_processors.cpp  face_processors.h  utils.h
FaceDetectionRTSP/: CMakeLists.txt  face_align.h  face_detectors.cpp  face_detectors.h  read_rtsp.cpp  utils.cpp
SCRFD/: CMakeLists.txt  face_detectors.cpp  face_detectors.h  logging.h  utils.h
SCRFD/plugins/: README.md  gatherNMSCustomOutputs.cu
SCRFD/tools/: add_full_nms_plugins.py  create_post_process.py
YOLOv7/: README.md
YOLOv7/C++/: CMakeLists.txt  read_rtsp.cpp  utils.cpp  utils.h  yolov7.cpp  yolov7.h
YOLOv7/Pybind11/: CMakeLists.txt  main.cpp  read_rtsp.cpp  test_pybind11.py
YOLOv7/Pybind11/yolov7/: yolov7.cpp  yolov7.h
YOLOv7/Python/: object_detector_trt_nms.py
YOLOv7/Python/tools/: add_nms_plugins.py  export.py
